<resources>
    <string name="app_name">Water Journal</string>
    <string name="welcome">Welcome to the Water journal app setup!</string>
    <string name="announce_weight">Your weight:</string>
    <string name="announce_target">Your daily water target:</string>
    <string name="placeholder_x">x</string>
    <string name="insert_weight">Insert your weight:</string>
    <string name="kg">kg</string>
    <string name="announce_water_target">Your calculated daily water target:</string>
    <string name="announce_info">You can set a custom water target in the app preferences.</string>
    <string name="whenReady">When ready:</string>
    <string name="toMainButton">Continue</string>
    <string name="text_app_name">Water Journal</string>
    <string name="button_store_user_data">Save</string>
    <string name="button_add_drink">Add</string>
    <string name="text_preferences">App preferences:</string>
    <string name="button_drinking_history">History</string>
    <string name="button_home">Home</string>
    <string name="button_save_preferences">Save</string>
    <string name="button_tips">Tips</string>
    <string name="text_add_weight">Insert weight (kg)</string>
    <string name="text_drink_ml">ml</string>
    <string name="button_remove_resent">Remove recent</string>
    <string name="text_sex">Sex</string>
    <string name="text_weight">Weight:</string>
    <string name="button_preferences">Preferences</string>
    <string name="text_add_drink">Add drink:</string>
    <string name="text_daily_goal">Daily water goal status:</string>
    <string name="text_daily_goal_pref">Daily goal:</string>
    <string name="text_amount_goal">Amount / Goal</string>
    <string name="text_history">Your drinking history:</string>
    <string name="title_home">Water Journal</string>
    <string name="title_history">History</string>
    <string name="title_prefenrences">Preferences</string>
    <string name="waterdrop">waterdrop</string>
    <string name="text_kg_pref">kg</string>
    <string name="text_l_pref">litres</string>
    <string name="title_tips">Tips</string>
    <string name="text_tips_water">Water: \n \n-Maintenances fluid balance \n-Regulates body temperature \n-Supports digestion \n-Transports and absorbs nutrients \n-Removes metabolic products \n\n(Source: THL)</string>
    <string name="text_tips_child">For children: \n \n-Normally, a child needs 1 to 1.5 liters of fluid a day. \n-In cold weather, the need for fluid may be even higher. \n-Provide your child to drink evenly throughout the day. \n-If a kid pees less often than usual and the pee is darker than usual, the child has drunk too little. \n-Dehydration can also cause headaches and irritability. \n\n(Source: THL)</string>
    <string name="text_tips_adult">For adults: \n\n-Adults should drink 2-3 liters of fluid a day on average. \n-About a half of this should be drunk and the other half with food. \n-Sweating and being in the sauna increase the need for fluid. \n-If you drink coffee or alcohol, always drink also a glass of water with it. \n\n(Source: THL)</string>
    <string name="text_tips_pregnant">For pregnant women:  \n\n-Remember to drink enough.  \n-Your body produces extra blood and needs fluid.  \n-The fluid also supports metabolism, reduces swelling and prevents constipation.  \n-It is good to drink skimmed milk products 5-6 dl a day.  \n-This will give you enough calcium and vitamin D.  \n-Do not drink alcohol.  \n-Alcohol can harm the fetus at any stage of pregnancy.  \n\n(Source: THL)</string>
    <string name="text_tips_breastfeeding">For breastfeeding: \n\n-When you breastfeed, you lose fluid. \n-So drink about the same amount as your kid drinks your breast milk. \n-However, extra drinking does not increase the amount of breast milk. \n-Do not drink too much fluid. \n-More than five liters a day is already clearly too much for the body. \n-Suitable drinks include water, skimmed milk and buttermilk, tea and low-sugar, dilute juices. \n-Enjoy your coffee in moderation. \n-Excessive coffee drinking can make a baby restless, as some of the caffeine passes into breast milk. \n-Avoid alcohol while breastfeeding. \n-Alcohol is eliminated from breast milk as quickly as from the blood. \n-The highest alcohol content is about 30-60 minutes after drinking alcohol. \n\n(Source: THL)</string>
    <string name="text_tips_elderly">For the elderly: \n\n-Drink 1 to 1.5 liters a day. \n-Drink even if you are not thirsty. \n-In addition to water and dairy products, good drinks include whole juices, juice drinks and soft drinks. \n-Eat liquid foods such as salads and cold soups. \n-Reserve a daily drink in the fridge. \n-This will also allow you to monitor how much you drink. \n-Drink more fluids in the morning and during the day. \n-Drinking plenty in the evening increases urine output at night. \n-Dehydration is especially severe for the elderly, as there is less water in the body than in the younger ones. \n-Dehydration can occur very quickly. \n-It can lead to, among other things, a drop in blood pressure and falls. \n-Some medications also increase the need for fluid. \n\n(Source: THL)</string>
    <string name="text_you_drank">You drank</string>
    <string name="text_ml_at">ml at</string>
</resources>